--- a/custom_components/vaillant_vsmart/translations/hr.json
+++ b/custom_components/vaillant_vsmart/translations/hr.json
@@ -34,5 +34,35 @@
             "already_in_progress": "Konfiguracija je već u tijeku.",
             "already_configured": "Račun je otprije konfiguriran."
         }
+    },
+    "entity": {
+        "water_heater": {
+            "vaillant": {
+                "state": {
+                    "heating": "Grijanje",
+                    "hot_water_boost": "Pojačano grijanje vode",
+                    "hot_water_only": "Samo topla voda",
+                    "stand_by": "Stanje pripravnosti"
+                },
+                "state_attributes": {
+                    "operation_list": {
+                        "state": {
+                            "heating": "Grijanje",
+                            "hot_water_boost": "Pojačano grijanje vode",
+                            "hot_water_only": "Samo topla voda",
+                            "stand_by": "Stanje pripravnosti"
+                        }
+                    },
+                    "operation_mode": {
+                        "state": {
+                            "heating": "Grijanje",
+                            "hot_water_boost": "Pojačano grijanje vode",
+                            "hot_water_only": "Samo topla voda",
+                            "stand_by": "Stanje pripravnosti"
+                        }
+                    }
+                }
+            }
+        }
     }
 }
