Added 2 energy sensors which are disabled by default but can be enabled by user

--- a/custom_components/vaillant_vsmart/translations/fr.json
+++ b/custom_components/vaillant_vsmart/translations/fr.json
@@ -42,6 +42,12 @@
       },
       "water_heating": {
         "name": "Consommation de gaz eau chaude"
+      },
+      "elec_heating": {
+        "name": "Consommation électrique chauffage"
+      },
+      "elec_water_heating": {
+        "name": "Consommation électrique eau chaude"
       }
     },
     "water_heater": {
