--- a/custom_components/vaillant_vsmart/translations/hr.json
+++ b/custom_components/vaillant_vsmart/translations/hr.json
@@ -36,6 +36,11 @@
         }
     },
     "entity": {
+        "sensor": {
+            "gas_heating": {
+                "name": "Gas heating"
+            }
+        },
         "water_heater": {
             "vaillant": {
                 "state": {
