feat: Add new sensor for outdoor temperature

--- a/custom_components/vaillant_vsmart/translations/en.json
+++ b/custom_components/vaillant_vsmart/translations/en.json
@@ -37,6 +37,9 @@
     },
     "entity": {
         "sensor": {
+            "outdoor_temperature": {
+                "name": "Outdoor temperature"
+            },
             "sum_boiler_on": {
                 "name": "Boiler on duration"
             },
