--- a/custom_components/vaillant_vsmart/translations/hr.json
+++ b/custom_components/vaillant_vsmart/translations/hr.json
@@ -37,6 +37,9 @@
     },
     "entity": {
         "sensor": {
+            "outdoor_temperature": {
+                "name": "Vanjska temperatura"
+            },
             "sum_boiler_on": {
                 "name": "Vrijeme rada bojlera"
             },
