--- a/custom_components/vaillant_vsmart/translations/pl.json
+++ b/custom_components/vaillant_vsmart/translations/pl.json
@@ -36,11 +36,15 @@
         }
     },
     "entity": {
+        "switch": {
+            "hwb": {
+                "name": "Doładowanie ciepłej wody"
+            }
+        },
         "water_heater": {
             "vaillant": {
                 "state": {
                     "heating": "Ogrzewanie",
-                    "hot_water_boost": "Doładowanie ciepłej wody",
                     "hot_water_only": "Tylko ciepła woda",
                     "stand_by": "Tryb czuwania"
                 },
@@ -48,7 +52,6 @@
                     "operation_list": {
                         "state": {
                             "heating": "Ogrzewanie",
-                            "hot_water_boost": "Doładowanie ciepłej wody",
                             "hot_water_only": "Tylko ciepła woda",
                             "stand_by": "Tryb czuwania"
                         }
@@ -56,7 +59,6 @@
                     "operation_mode": {
                         "state": {
                             "heating": "Ogrzewanie",
-                            "hot_water_boost": "Doładowanie ciepłej wody",
                             "hot_water_only": "Tylko ciepła woda",
                             "stand_by": "Tryb czuwania"
                         }
