feat: Separate hwb switch for boiler device (#345)

--- a/custom_components/vaillant_vsmart/translations/fr.json
+++ b/custom_components/vaillant_vsmart/translations/fr.json
@@ -38,7 +38,7 @@
     "entity": {
         "sensor": {
             "sum_boiler_on": {
-                "name": "Durée de fonctionnement de la chaudière"
+                "name": "Utilisation quotidienne de la chaudière"
             },
             "sum_energy_gaz_heating": {
                 "name": "Consommation de gaz chauffage"
@@ -53,11 +53,15 @@
                 "name": "Consommation électrique eau chaude"
             }
         },
+        "switch": {
+            "hwb": {
+                "name": "Boost eau chaude"
+            }
+        },
         "water_heater": {
             "vaillant": {
                 "state": {
                     "heating": "En chauffe",
-                    "hot_water_boost": "Boost eau chaude",
                     "hot_water_only": "Eau chaude uniquement",
                     "stand_by": "En veille"
                 },
@@ -65,7 +69,6 @@
                     "operation_list": {
                         "state": {
                             "heating": "En chauffe",
-                            "hot_water_boost": "Boost eau chaude",
                             "hot_water_only": "Eau chaude uniquement",
                             "stand_by": "En veille"
                         }
@@ -73,7 +76,6 @@
                     "operation_mode": {
                         "state": {
                             "heating": "En veille",
-                            "hot_water_boost": "Boost eau chaudet",
                             "hot_water_only": "Eau chaude uniquement",
                             "stand_by": "En veille"
                         }
