--- a/custom_components/vaillant_vsmart/translations/hr.json
+++ b/custom_components/vaillant_vsmart/translations/hr.json
@@ -36,6 +36,11 @@
         }
     },
     "entity": {
+        "number": {
+            "default_setpoint_duration": {
+                "name": "Pretpostavljeno zadano trajanje"
+            }
+        },
         "sensor": {
             "outdoor_temperature": {
                 "name": "Vanjska temperatura"
